--- a/main.html
+++ b/main.html
@@ -67,12 +67,12 @@
 
                                 <div class="mobile-close-btn" id="mobileCloseBtn">×</div>
 
-                                <a href="#">О компании</a>
-                                <a href="#">Укладка тротуарной плитки</a>
-                                <a href="#">Портфолио</a>
-                                <a href="#">Полезно знать</a>
-                                <a href="#">Доставка и оплата</a>
-                                <a href="#">Контакты</a>
+                                <a href="#"data-aos="fade-down-right"data-aos-duration="500">О компании</a>
+                                <a href="#"data-aos="fade-down-right"data-aos-duration="800">Укладка тротуарной плитки</a>
+                                <a href="#"data-aos="fade-down-right"data-aos-duration="1000">Портфолио</a>
+                                <a href="#"data-aos="fade-down-right"data-aos-duration="1200">Полезно знать</a>
+                                <a href="#"data-aos="fade-down-right"data-aos-duration="1500">Доставка и оплата</a>
+                                <a href="#"data-aos="fade-down-right"data-aos-duration="1800">Контакты</a>
                             </div>
 
                             <div class="hamburger" id="hamburger-menu">
@@ -197,11 +197,11 @@
         <div class="about">
             <div class="container">
                 <div class="about__container">
-                    <img src="./img/about.svg" alt="строительство">
+                    <img src="./img/about.svg" alt="строительство"data-aos="fade-up"data-aos-anchor-placement="bottom-bottom">
                     <div class="about__box">
-                        <h2>О нас</h2>
-                        <h4>«Мастер Строй» - надежная и недорогая тротуарная плитка в Волоколамском районе</h4>
-                        <p>Наша компания готова помочь вам и с первым и со вторым аспектом данной задачи. В нашем
+                        <h2 data-aos="fade-left"data-aos-duration="1500">О нас</h2>
+                        <h4 data-aos="fade-down"data-aos-duration="1500">«Мастер Строй» - надежная и недорогая тротуарная плитка в Волоколамском районе</h4>
+                        <p data-aos="fade-down-left"data-aos-duration="1500">Наша компания готова помочь вам и с первым и со вторым аспектом данной задачи. В нашем
                             каталоге вы сможете подобрать желаемый вариант материала и сразу заказать профессиональную
                             укладку на вашем участке. Вниманию покупателей всегда доступна качественная и прочная
                             тротуарная плитка от производителя по оптимальной стоимости.Если вам нужна надежная
@@ -212,7 +212,7 @@
                             позвонить менеджеру по указанным телефонам.<br><br>Теперь если вам нужна тротуарная плитка,
                             вы знаете где ее можно приобрести. «Мастер Строй» - компания-производитель, которая
                             гарантирует достойный уровень качества по приятной цене. <br><br> ООО «МАСТЕ</p>
-                        <button class="button">
+                        <button class="button" data-aos="fade-down-right"data-aos-duration="500">
                             <div class="button__outer">
                                 <div class="button__inner">
                                     <span class="button__text">Приобрести</span>
@@ -227,7 +227,7 @@
         <div class="goods">
             <div class="container">
                 <div class="goods__container">
-                    <h2 style="text-align: center; margin: 50px 0;">Топ товаров</h2>
+                    <h2 style="text-align: center; margin: 50px 0;"data-aos="zoom-in">Топ товаров</h2>
                     <div class="goods__boxes">
                         <div class="goods__item">
                             <div class="goods__box">
@@ -235,7 +235,7 @@
                                 <h5 class="goods__title">Шестигранник 250x220x70</h5>
                                 <p class="goods__desc">Размер: 250x220x70мм<br>Количество: 21 шт/кв.м<br>Цвета в
                                     наличии: 8</p>
-                                <div class="goods__colors">
+                                <div class="goods__colors"data-aos="flip-left"data-aos-easing="ease-out-cubic"data-aos-duration="1500">
                                     <div class="goods__color" style="background: #737373" data-color="Серый"></div>
                                     <div class="goods__color" style="background: #9C0909" data-color="Красный"></div>
                                     <div class="goods__color" style="background: #D48D37" data-color="Желтый"></div>
@@ -260,7 +260,7 @@
                                 <h5 class="goods__title">Брусчатка 200x100x50</h5>
                                 <p class="goods__desc">Размер: 200x100x50мм <br>Количество: 50 пара шт/кв.м <br>Цвета в
                                     наличии: 8</p>
-                                <div class="goods__colors">
+                                <div class="goods__colors"data-aos="flip-left"data-aos-easing="ease-out-cubic"data-aos-duration="1500">
                                     <div class="goods__color" style="background: #737373" data-color="Серый"></div>
                                     <div class="goods__color" style="background: #9C0909" data-color="Красный"></div>
                                     <div class="goods__color" style="background: #D48D37" data-color="Желтый"></div>
@@ -285,7 +285,7 @@
                                 <h5 class="goods__title">Плитка квадрат 330x330x60</h5>
                                 <p class="goods__desc">Размер: 330x330x60мм <br>Количество: 9 шт/кв.м <br>Цвета в
                                     наличии: 8</p>
-                                <div class="goods__colors">
+                                <div class="goods__colors"data-aos="flip-left"data-aos-easing="ease-out-cubic"data-aos-duration="1500">
                                     <div class="goods__color" style="background: #737373" data-color="Серый"></div>
                                     <div class="goods__color" style="background: #9C0909" data-color="Красный"></div>
                                     <div class="goods__color" style="background: #D48D37" data-color="Желтый"></div>
@@ -310,7 +310,7 @@
                                 <h5 class="goods__title">Катушка 250x160x60</h5>
                                 <p class="goods__desc">Размер: 250x160x60мм <br>Количество: 30 шт/кв.м Цвета в наличии:
                                     8<br> </p>
-                                <div class="goods__colors">
+                                <div class="goods__colors"data-aos="flip-left"data-aos-easing="ease-out-cubic"data-aos-duration="1500">
                                     <div class="goods__color" style="background: #737373" data-color="Серый"></div>
                                     <div class="goods__color" style="background: #9C0909" data-color="Красный"></div>
                                     <div class="goods__color" style="background: #D48D37" data-color="Желтый"></div>
@@ -335,7 +335,7 @@
                                 <h5 class="goods__title">Кирпичик 250x125x60</h5>
                                 <p class="goods__desc">Размер: 250x125x60мм <br>Количество: 32 шт/кв.м<br>Цвета в
                                     наличии: 8</p>
-                                <div class="goods__colors">
+                                <div class="goods__colors"data-aos="flip-left"data-aos-easing="ease-out-cubic"data-aos-duration="1500">
                                     <div class="goods__color" style="background: #737373" data-color="Серый"></div>
                                     <div class="goods__color" style="background: #9C0909" data-color="Красный"></div>
                                     <div class="goods__color" style="background: #D48D37" data-color="Желтый"></div>
@@ -360,7 +360,7 @@
                                 <h5 class="goods__title">Волна 250x125x60</h5>
                                 <p class="goods__desc">Размер: 250x125x60мм <br>Количество: 32/40 шт/кв.м<br>Цвета в
                                     наличии: 8</p>
-                                <div class="goods__colors">
+                                <div class="goods__colors"data-aos="flip-left"data-aos-easing="ease-out-cubic"data-aos-duration="1500">
                                     <div class="goods__color" style="background: #737373" data-color="Серый"></div>
                                     <div class="goods__color" style="background: #9C0909" data-color="Красный"></div>
                                     <div class="goods__color" style="background: #D48D37" data-color="Желтый"></div>
@@ -393,22 +393,22 @@
                             <a href="#"><img class="production__img" src="./img/logo.svg" alt="masterstroy"></a>
                             <div>
                                 <img src="./img/production.svg" alt="dastavka">
-                                <p>Доставка и разгрузка плитки краном-манипулятором</p>
+                                <p data-aos="fade-right"  data-aos-duration="1500">Доставка и разгрузка плитки краном-манипулятором</p>
                             </div>
                             <div>
                                 <img src="./img/production2.svg" alt="dastavka">
-                                <p>Множество видов тротуарной плитки различной формы и фактуры</p>
+                                <p data-aos="fade-right"  data-aos-duration="1500">Множество видов тротуарной плитки различной формы и фактуры</p>
                             </div>
                             <div>
                                 <img src="./img/production3.svg" alt="dastavka">
-                                <p>Весь товар сертифицирован! Официальная гарантия!</p>
+                                <p data-aos="fade-right"  data-aos-duration="1500">Весь товар сертифицирован! Официальная гарантия!</p>
                             </div>
                         </li>
                         <li>
                             <iframe src="https://www.youtube.com/embed/ejsgLLCtR9E?si=kzQT9evV-ytKcfKx"
                                 title="YouTube video player" frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen data-aos="fade-down"data-aos-duration="1500"></iframe>
                         </li>
                     </ul>
                 </div>
@@ -420,8 +420,8 @@
         <div class="work">
             <div class="container">
                 <div class="work__container">
-                    <h2 style="text-align: center; margin: 50px 0;">Наши работы</h2>
-                    <p>Отделка участка, сада, входной группы или любой другой частной территории требует большого
+                    <h2 style="text-align: center; margin: 50px 0;"data-aos="fade-down"data-aos-duration="1500">Наши работы</h2>
+                    <p data-aos="fade-down-right"data-aos-duration="1500">Отделка участка, сада, входной группы или любой другой частной территории требует большого
                         внимания со стороны владельца, поскольку именно эти зоны являются «лицом», а значит и престижем
                         вашего дома или коммерческого объекта. Подбор прочного и эстетически презентабельного материала
                         для оформления входа, дорожек, пешеходных зон – это уже половина успеха отделки. Вторая половина
@@ -466,38 +466,38 @@
                     <h2 style="text-align: center; margin: 50px 0; color: #FFFF;">Наши преимущества</h2>
                     <ul class="property__list">
                         <li class="property__items">
-                            <img src="./img/clipboard_120835 1.svg" alt="clipboard">
+                            <img src="./img/clipboard_120835 1.svg" alt="clipboard"data-aos="flip-left"data-aos-easing="ease-out-cubic"data-aos-duration="1500">
                             <h5>Тротуарная плитка от производителя в широком ассортименте</h5>
                             <p>На сайте вы сможете подобрать прессованную, вибролитую или фасадную плитку, блоки и
                                 бордюры, водостоки, крышки на столбы и многое другое.</p>
                         </li>
                         <li class="property__items">
-                            <img src="./img/user-4_icon-icons.com_63829 1.svg" alt="user">
+                            <img src="./img/user-4_icon-icons.com_63829 1.svg" alt="user"data-aos="flip-left"data-aos-easing="ease-out-cubic"data-aos-duration="1500">
                             <h5>Высокий уровень сервиса обслуживания</h5>
                             <p>Наши менеджеры всегда вежливые и профессиональные в работе с клиентами, они готовы помочь
                                 с выбором нужной модели и ответить на все вопросы клиента.</p>
                         </li>
                         <li class="property__items">
-                            <img src="./img/builder-27_icon-icons.com_60366 1.svg" alt="builder">
+                            <img src="./img/builder-27_icon-icons.com_60366 1.svg" alt="builder"data-aos="flip-left"data-aos-easing="ease-out-cubic"data-aos-duration="1500">
                             <h5>Услуги команды опытных специалистов по монтажу</h5>
                             <p>Наша компания предлагает услуги профессиональной укладки и другие работы по
                                 благоустройству частных территорий.</p>
                         </li>
                         <li class="property__items">
-                            <img src="./img/mbridelivery_99588 1.svg" alt="delivery">
+                            <img src="./img/mbridelivery_99588 1.svg" alt="delivery"data-aos="flip-left"data-aos-easing="ease-out-cubic"data-aos-duration="1500">
                             <h5>Быстрая и удобная доставка</h5>
                             <p>Развоз заказов осуществляется при помощи спецтехники – манипулятора, облегчающего процесс
                                 погрузки и разгрузки по Волоколамскому, Лотошинскому, Шаховскому району, Истре, Клину,
                                 Рузе.</p>
                         </li>
                         <li class="property__items">
-                            <img src="./img/mbricash_99554 1.svg" alt="cash">
+                            <img src="./img/mbricash_99554 1.svg" alt="cash"data-aos="flip-left"data-aos-easing="ease-out-cubic"data-aos-duration="1500">
                             <h5>Демократичная стоимость</h5>
                             <p>Если вы хотите подобрать и купить тротуарную плитку по наиболее выгодной цене в регионе –
                                 вам однозначно в «Мастер Строй»! У нас всегда первая цена напрямую от производителя!</p>
                         </li>
                         <li class="property__items">
-                            <img src="./img/quality_award_icon_152104 1.svg" alt="award">
+                            <img src="./img/quality_award_icon_152104 1.svg" alt="award"  data-aos="flip-left"data-aos-easing="ease-out-cubic"data-aos-duration="1500">
                             <h5>Безупречный контроль качества продукции</h5>
                             <p>Все материалы соответствуют техническим нормам ГОСТа, а тщательный контроль позволяет
                                 исключить риск попадания брака в партию.</p>
@@ -514,7 +514,7 @@
                 <div class="footer__container">
                     <div class="footer__first">
                         <div class="footer__box">
-                            <h6>Магазин</h6>
+                            <h6 data-aos="flip-right"data-aos-anchor-placement="top-bottom">Магазин</h6>
                             <p>Петрсональный раздел</p>
                             <div class="footer__item">
                                 <i class="fas fa-clock footer__icon"></i>
@@ -558,6 +558,12 @@
         </div>
     </footer>
 
+
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
     <script src="./js/main.js"></script>
 </body>
 
