--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
 </head>
 <body class="login__page">
     <div class="glass__container">
-        <h2>Login</h2>
+        <h2>Логин</h2>
         <form action="main.html" method="get">
             <div class="input__group">
                 <input type="text" required>
-                <label>Username</label>
+                <label>Имя пользователя</label>
             </div>
             <div class="input__group">
                 <input type="password" required>
-                <label>Password</label>
+                <label>Пароль</label>
             </div>
             <div class="remember__forgot">
-                <label><input type="checkbox">Remember me</label>
-                <a href="#">Forgot Password?</a>
+                <label><input type="checkbox">Запомни меня</label>
+                <a href="#">Забыли пароль?</a>
             </div>
-            <button type="submit" class="login__btn">Login</button>
+            <button type="submit" class="login__btn">Логин</button>
             <div class="register__link">
-                <p>Do'nt have an account?<a href="#">Register</a></p>
+                <p>У вас нет учетной записи? <a href="#">Регистрироваться</a></p>
             </div>
         </form>
     </div>
