--- a/main.html
+++ b/main.html
@@ -91,11 +91,11 @@
         <div class="hero">
             <div class="container">
                 <div class="hero__container">
-                    <h1>Тротуарная плитка в Волоколамске напрямую от производителя</h1>
-                    <p>Вам нужна качественная и недорогая тротуарная плитка в Волоколамске? Мы готовы предложить
+                    <h1 data-aos="fade-down"data-aos-duration="1500">Тротуарная плитка в Волоколамске напрямую от производителя</h1>
+                    <p data-aos="fade-down-left"data-aos-duration="1500">Вам нужна качественная и недорогая тротуарная плитка в Волоколамске? Мы готовы предложить
                         отличную возможность приобрести современные модели с высокими показателями эстетики и
                         механической стойкости напрямую от производителя – компании «Мастер Строй».</p>
-                    <button class="button">
+                    <button class="button" data-aos="fade-up"data-aos-duration="2000">
                         <div class="button__outer">
                             <div class="button__inner">
                                 <span class="button__text">Каталог</span>
@@ -109,9 +109,9 @@
         <div class="product">
             <div class="container">
                 <div class="product__container">
-                    <h2 style="text-align: center; margin-bottom: 30px;">Каталог продукции</h2>
+                    <h2 style="text-align: center; margin-bottom: 30px;"  data-aos="zoom-in-up"data-aos-duration="1500">Каталог продукции</h2>
                     <div class="product__box">
-                        <div class="card">
+                        <div class="card"data-aos="fade-up"data-aos-duration="2000">
                             <div class="first__content">
                                 <img src="./img/product.svg" alt="Прессованная плитка">
                             </div>
@@ -120,7 +120,7 @@
                             </div>
                         </div>
 
-                        <div class="card">
+                        <div class="card"data-aos="fade-up"data-aos-duration="2000">
                             <div class="first__content">
                                 <img src="./img/product2.svg" alt="Вибролитая плитка">
                             </div>
@@ -129,7 +129,7 @@
                             </div>
                         </div>
 
-                        <div class="card">
+                        <div class="card"data-aos="fade-up"data-aos-duration="2000">
                             <div class="first__content">
                                 <img src="./img/product3.svg" alt="Садовый бордюр">
                             </div>
@@ -138,7 +138,7 @@
                             </div>
                         </div>
 
-                        <div class="card">
+                        <div class="card"data-aos="fade-up"data-aos-duration="2000">
                             <div class="first__content">
                                 <img src="./img/product4.svg" alt="Дорожный бордюр">
                             </div>
@@ -147,7 +147,7 @@
                             </div>
                         </div>
 
-                        <div class="card">
+                        <div class="card"data-aos="fade-up"data-aos-duration="2000">
                             <div class="first__content">
                                 <img src="./img/product5.svg" alt="Строительные блоки">
                             </div>
@@ -156,7 +156,7 @@
                             </div>
                         </div>
 
-                        <div class="card">
+                        <div class="card"data-aos="fade-up"data-aos-duration="2000">
                             <div class="first__content">
                                 <img src="./img/product6.svg" alt="Фасадная плитка">
                             </div>
@@ -165,7 +165,7 @@
                             </div>
                         </div>
 
-                        <div class="card">
+                        <div class="card"data-aos="fade-up"data-aos-duration="2000">
                             <div class="first__content">
                                 <img src="./img/product7.svg" alt="Водостоки тротуарные">
                             </div>
@@ -174,7 +174,7 @@
                             </div>
                         </div>
 
-                        <div class="card">
+                        <div class="card"data-aos="fade-up"data-aos-duration="2000">
                             <div class="first__content">
                                 <img src="./img/product8.svg" alt="Крышки на столбы">
                             </div>
@@ -231,7 +231,7 @@
                     <div class="goods__boxes">
                         <div class="goods__item">
                             <div class="goods__box">
-                                <img src="./img/goods.svg" alt="product" class="goods__image">
+                                <img src="./img/goods.svg" alt="product" class="goods__image"data-aos="zoom-in-up"data-aos-duration="2000">
                                 <h5 class="goods__title">Шестигранник 250x220x70</h5>
                                 <p class="goods__desc">Размер: 250x220x70мм<br>Количество: 21 шт/кв.м<br>Цвета в
                                     наличии: 8</p>
@@ -256,7 +256,7 @@
                         </div>
                         <div class="goods__item">
                             <div class="goods__box">
-                                <img src="./img/goods2.svg" alt="product" class="goods__image">
+                                <img src="./img/goods2.svg" alt="product" class="goods__image"data-aos="zoom-in-up"data-aos-duration="2000">
                                 <h5 class="goods__title">Брусчатка 200x100x50</h5>
                                 <p class="goods__desc">Размер: 200x100x50мм <br>Количество: 50 пара шт/кв.м <br>Цвета в
                                     наличии: 8</p>
@@ -281,7 +281,7 @@
                         </div>
                         <div class="goods__item">
                             <div class="goods__box">
-                                <img src="./img/goods3.svg" alt="product" class="goods__image">
+                                <img src="./img/goods3.svg" alt="product" class="goods__image"data-aos="zoom-in-up"data-aos-duration="2000">
                                 <h5 class="goods__title">Плитка квадрат 330x330x60</h5>
                                 <p class="goods__desc">Размер: 330x330x60мм <br>Количество: 9 шт/кв.м <br>Цвета в
                                     наличии: 8</p>
@@ -306,7 +306,7 @@
                         </div>
                         <div class="goods__item">
                             <div class="goods__box">
-                                <img src="./img/goods4.svg" alt="product" class="goods__image">
+                                <img src="./img/goods4.svg" alt="product" class="goods__image"data-aos="zoom-in-up"data-aos-duration="2000">
                                 <h5 class="goods__title">Катушка 250x160x60</h5>
                                 <p class="goods__desc">Размер: 250x160x60мм <br>Количество: 30 шт/кв.м Цвета в наличии:
                                     8<br> </p>
@@ -331,7 +331,7 @@
                         </div>
                         <div class="goods__item">
                             <div class="goods__box">
-                                <img src="./img/goods5.svg" alt="product" class="goods__image">
+                                <img src="./img/goods5.svg" alt="product" class="goods__image"data-aos="zoom-in-up"data-aos-duration="2000">
                                 <h5 class="goods__title">Кирпичик 250x125x60</h5>
                                 <p class="goods__desc">Размер: 250x125x60мм <br>Количество: 32 шт/кв.м<br>Цвета в
                                     наличии: 8</p>
@@ -356,7 +356,7 @@
                         </div>
                         <div class="goods__item">
                             <div class="goods__box">
-                                <img src="./img/goods6.svg" alt="product" class="goods__image">
+                                <img src="./img/goods6.svg" alt="product" class="goods__image"data-aos="zoom-in-up"data-aos-duration="2000">
                                 <h5 class="goods__title">Волна 250x125x60</h5>
                                 <p class="goods__desc">Размер: 250x125x60мм <br>Количество: 32/40 шт/кв.м<br>Цвета в
                                     наличии: 8</p>
@@ -518,13 +518,13 @@
                             <p>Петрсональный раздел</p>
                             <div class="footer__item">
                                 <i class="fas fa-clock footer__icon"></i>
-                                <div id="time" class="footer__text">
+                                <div id="time" class="footer__text"data-aos="zoom-in-right"data-aos-duration="2000">
                                     Режим работы: <br> 8:00 – 20:00
                                 </div>
                             </div>
                             <div class="footer__item">
                                 <i class="fas fa-phone footer__icon"></i>
-                                <div class="footer__text">
+                                <div class="footer__text"data-aos="zoom-in-right"data-aos-duration="2000">
                                     <a href="tel:+74951234567" class="footer__link">+7 (926) 105-94-14</a>
                                     <a href="tel:+74957654321" class="footer__link">+7 (910) 470-67-97</a>
                                     <a href="tel:+74959876543" class="footer__link">+7 (499) 994-90-99</a>
@@ -532,19 +532,19 @@
                             </div>
                         </div>
                         <ul class="footer__list">
-                            <li class="footer__items">
+                            <li class="footer__items"data-aos="zoom-in-up"data-aos-duration="2000">
                                 <h6>Каталог</h6>
                                 <a class="footer__link" href="#">Акции</a>
                                 <a class="footer__link" href="#">Тротуарная плитка</a>
                                 <a class="footer__link" href="#">Бордюры</a>
                             </li>
-                            <li class="footer__items">
+                            <li class="footer__items"data-aos="zoom-in-up"data-aos-duration="2000">
                                 <h6>Сервисы</h6>
                                 <a class="footer__link" href="#">Сервисы</a>
                                 <a class="footer__link" href="#">Укладка брусчатки</a>
                                 <a class="footer__link" href="#">Доставка</a>
                             </li>
-                            <li class="footer__items">
+                            <li class="footer__items"data-aos="zoom-in-up"data-aos-duration="2000">
                                 <h6>О компании</h6>
                                 <a class="footer__link" href="#">Контакты</a>
                                 <a class="footer__link" href="#">Завод BRAER</a>
@@ -552,7 +552,7 @@
                             </li>
                         </ul>
                     </div>
-                    <p>© 2022 ООО "Мастер строй"</p>
+                    <p data-aos="zoom-in-down"data-aos-duration="2000">© 2022 ООО "Мастер строй"</p>
                 </div>
             </div>
         </div>
